chore: Add Author. Bump version to 1.0.1

--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "obstacle-course-solver",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
+  "author": {
+    "name": "Imobach Martin"
+  },
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
